--- a/marioTracker/templates/marioTracker/index.html
+++ b/marioTracker/templates/marioTracker/index.html
@@ -1,15 +1,31 @@
-<!DOCTYPE html>
+{% extends 'marioTracker/base.html' %}
 
-<html>
-<body>
-{% if players_list %}
-    <ul>
-        {% for player in players_list %}
-            <li><a href="{% url 'marioTracker:detail' player.id %}">{{ player.firstname }}</a></li>
-        {% endfor %}
-    </ul>
+{% load static %}
+
+{% block style %}
+    <link rel="stylesheet" href="{% static 'marioTracker/index.css' %}">
+{% endblock %}
+
+{% block nav %}
+    <nav>
+        <ul>
+            <p>Some</p>
+            {% for x in index_list.zipped_List %}
+                <li><a href="{% url urlParam %}">{{ link }}</a></li>
+                <p>{{x}}</p>
+            {% endfor %}
+        </ul>
+    </nav>
+{% endblock %}
+
+{% block content %}
+    {% if index_list %}
+        <ul>
+            {% for player in index_list %}
+                <li><a href="{% url 'marioTracker:detail' player.id %}">{{ player.firstname }}</a></li>
+            {% endfor %}
+        </ul>
     {% else %}
-        <p> No players yet BOSO</p>
+            <p> No players yet BOSO</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
