--- a/marioTracker/templates/marioTracker/base.html
+++ b/marioTracker/templates/marioTracker/base.html
@@ -5,7 +5,7 @@
         {% block style %}
         {% endblock %}
     </head>
-    <body>
+    <body id="body">
         
         {% block nav %}
         {% endblock %}
