--- a/marioTracker/static/marioTracker/index.css
+++ b/marioTracker/static/marioTracker/index.css
@@ -1,11 +1,5 @@
-html {
+* {
     box-sizing: border-box;
-}
-
-*, *::before, *::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
 }
 
 .background {
@@ -45,7 +39,7 @@ html {
     font-size: 20px;
 }
 
-body{
+#body {
     background: black url("images/AI-Race-Track-Image.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -53,11 +47,19 @@ body{
 }
 
 /* slideshow */
+#gen-body {
+    font-family: Verdana, sans-serif;
+    margin: 0;
+}
 
 .slideshow-container {
-    max-width: 100%;
+    width: max-content;
     position: relative;
     margin: auto;
+}
+
+img {
+    vertical-align: middle;
 }
 
 .mySlides {
@@ -67,11 +69,12 @@ body{
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: 20%;
-    width: max-content;
+    top: 50%;
+    transform: translateY(50%);
+    width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: white;
+    color: rgb(166, 98, 98);
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
@@ -104,21 +107,6 @@ body{
     padding: 8px 12px;
     position: absolute;
     top: 0;
-}
-
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-    background-color: #717171;
 }
 
 .fade {
