--- a/marioTracker/static/marioTracker/mapGen.css
+++ b/marioTracker/static/marioTracker/mapGen.css
@@ -2,6 +2,7 @@ html, body {
     box-sizing: border-box;
     background-color: rgb(5, 5, 5);
     height: 100vh;
+    width: 100vw;
     margin: 0;
 }
 
@@ -14,30 +15,27 @@ html, body {
 
 .slideshow-container {
     max-width: 100%;
+    height: 90%;
     position: relative;
-    margin: auto;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
+    top: 5%;
+    overflow: hidden;
 }
 
 .mySlides {
     display: none;
-    text-align: center;
-    position: relative;
-    padding: 0px;
-    height: 100vh;
-    margin: 0 auto;
-    overflow: hidden;
+    height: 100%;
+}
+
+.mySlides picture {
+    max-width: 100%;
 }
 
 .mySlides img {
     max-height: 100%;
-    background-size: cover;
+    max-width: 100%;
+    height: 100%;
+    width: 90%;
+    margin: 0 5%;
 }
 
 .prev, .next {
@@ -48,7 +46,7 @@ html, body {
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: white;
+    color: #ece5e5;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
@@ -70,35 +68,64 @@ html, body {
 }
 
 .text {
-    color: #ecf4ffb0;
-    font-size: 18px;
-    padding: 10px;
     position: absolute;
-    bottom: 0px;
-    left: 0;
-    width: 100%;
-    box-sizing: border-box;
-    height: 10%;
+    bottom: 8px;
 }
 
 .numbertext {
-    color: #ecf4ffb0;
-    font-size: 15px;
-    padding: 8px 12px;
     position: absolute;
-    top: 20px;
-    box-sizing: border-box;
-    height: 5%;
+    top: 0;
+}
+
+.text, .numbertext {
     width: 100%;
-    text-shadow: 2px 1px 2px rgb(8, 6, 6);
+    text-align: center;
+    font-size: 30px;
+    font-family: fantasy;
+    color: aliceblue;
+    padding: 8px 12px;
+    opacity: 1;
+}
+
+@media screen and (max-width: 465px){
+    .text, .numbertext {
+        font-size: 15px;
+    }
 }
 
 .fade {
     animation-name: fade;
-    animation-duration: 1.5s;
+    animation-duration: 2s;
+}
+
+.moveR {
+    animation-name: moveR;
+    animation-duration: 4s;
+}
+
+.moveL {
+    animation-name: moveL;
+    animation-duration: 6s;
+}
+
+@keyframes moveR {
+    from {transform: translateX(-100%);
+          opacity: 0;}
+    to {transform: translateX(0);
+        opacity: 1;}
+}
+
+@keyframes moveL {
+    from {transform: translateX(100%);
+          opacity: 0;}
+    to {transform: translateX(0);
+        opacity: 1;}
 }
 
 @keyframes fade {
     from {opacity: 0.4}
     to {opacity: 1}
 }
+
+
+
