--- a/marioTracker/templates/marioTracker/mapDisplay.html
+++ b/marioTracker/templates/marioTracker/mapDisplay.html
@@ -50,56 +50,55 @@
             </div>
 
             <div class = "mySlides fade">
-                <div class="numbertext move"> 5 / {{ map_list|length }}</div>
+                <div class="numbertext moveR"> 5 / {{ map_list|length }}</div>
                 <picture>
                     <source media="(max-width:465px)" srcset="{% static 'marioTracker/images/'|add:map_list.4 %}">
                     <source media="(max-width:2000px)" srcset="{% static 'marioTracker/images/wide'|add:map_list.4 %}">
                     <img src="{% static 'marioTracker/images/'|add:map_list.4 %}" alt="{{ map_list.4 }}">
                 </picture>                
-                <div class="text move">{{map_list.4}}</div>
+                <div class="text moveL">{{map_list.4}}</div>
             </div>
 
             <div class = "mySlides fade">
-                <div class="numbertext move"> 6 / {{ map_list|length }}</div>
+                <div class="numbertext moveR"> 6 / {{ map_list|length }}</div>
                 <picture>
                     <source media="(max-width:465px)" srcset="{% static 'marioTracker/images/'|add:map_list.5 %}">
                     <source media="(max-width:2000px)" srcset="{% static 'marioTracker/images/wide'|add:map_list.5 %}">
                     <img src="{% static 'marioTracker/images/'|add:map_list.5 %}" alt="{{ map_list.5 }}">
                 </picture>
-                <div class="text move">{{map_list.5}}</div>
+                <div class="text moveL">{{map_list.5}}</div>
             </div>
 
             <div class = "mySlides fade">
-                <div class="numbertext move"> 7 / {{ map_list|length }}</div>
+                <div class="numbertext moveR"> 7 / {{ map_list|length }}</div>
                 <picture>
                     <source media="(max-width:465px)" srcset="{% static 'marioTracker/images/'|add:map_list.6 %}">
                     <source media="(max-width:2000px)" srcset="{% static 'marioTracker/images/wide'|add:map_list.6 %}">
                     <img src="{% static 'marioTracker/images/'|add:map_list.6 %}" alt="{{ map_list.6 }}">
                 </picture>
-                <div class="text move">{{map_list.6}}</div>
+                <div class="text moveL">{{map_list.6}}</div>
             </div>
 
             <div class = "mySlides fade">
-                <div class="numbertext move"> 8 / {{ map_list|length }}</div>
+                <div class="numbertext moveR"> 8 / {{ map_list|length }}</div>
                 <picture>
                     <source media="(max-width:465px)" srcset="{% static 'marioTracker/images/'|add:map_list.7 %}">
                     <source media="(max-width:2000px)" srcset="{% static 'marioTracker/images/wide'|add:map_list.7 %}">
                     <img src="{% static 'marioTracker/images/'|add:map_list.7 %}" alt="{{ map_list.7 }}">
                 </picture>
-                <div class="text move">{{map_list.7}}</div>
+                <div class="text moveL">{{map_list.7}}</div>
             </div>
 
             <div class = "mySlides fade">
-                <div class="numbertext move"> 9 / {{ map_list|length }}</div>
+                <div class="numbertext moveR"> 9 / {{ map_list|length }}</div>
                 <picture>
                     <source media="(max-width:465px)" srcset="{% static 'marioTracker/images/'|add:map_list.8 %}">
                     <source media="(max-width:2000px)" srcset="{% static 'marioTracker/images/wide'|add:map_list.8 %}">
                     <img src="{% static 'marioTracker/images/'|add:map_list.8 %}" alt="{{ map_list.8 }}">
                 </picture>
-                <div class="text move">{{map_list.8}}</div>
+                <div class="text moveL">{{map_list.8}}</div>
             </div>
 
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <script type="text/javascript" src="{% static 'marioTracker/js/map.js' %}"></script>
