--- a/marioTracker/static/marioTracker/index.css
+++ b/marioTracker/static/marioTracker/index.css
@@ -2,15 +2,17 @@
     box-sizing: border-box;
 }
 
-.background {
-    background: black url("images/AI-Race-Track-Image.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+#body {
+   background-color: #B8F3FF; 
+}
+
+.header {
+    background-color: #660000;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navbar {
-    background-color: transparent;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -18,6 +20,7 @@
     overflow: hidden;
     position: absolute;
     padding-right: 10px;
+    background-color: transparent;
 }
 
 .nav-links {
@@ -28,7 +31,7 @@
 }
 
 .nav-item a {
-    color: rgb(255, 255, 255);
+    color: rgb(221, 152, 152);
     padding: 10px 15px;
     text-decoration: none;
     display: inline-block;
@@ -39,82 +42,32 @@
     font-size: 20px;
 }
 
-#body {
-    background: black url("images/AI-Race-Track-Image.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: right 35%;
+.cloud {
+    transform: translate(80%);
+    width: 400px;
+    height: 400px;
 }
 
-/* slideshow */
-#gen-body {
-    font-family: Verdana, sans-serif;
+.base {
+    transform: translate(80%);
     margin: 0;
+    padding: 0;
+    width: 200px;
+    height: 100px;
+    background-color: #fff; /* White cloud color */
+    border-radius: 100px; /* Makes the shape circular */
+    box-shadow: -20px 00px 0 0 #ffffff, 20px 00px 0 0 #ffffff, 60px 20px 0 0 #88136f,
+                80px 20px 0 0 #418f29, 100px 20px 0 0 #dae908, 120px 20px 0 0 #e66b07;
 }
 
-.slideshow-container {
-    width: max-content;
-    position: relative;
-    margin: auto;
-}
-
-img {
-    vertical-align: middle;
-}
-
-.mySlides {
-    display: none;
-}
-
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    transform: translateY(50%);
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: rgb(166, 98, 98);
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-.next{
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
-
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@keyframes fade {
-    from {opacity: 0.4}
-    to {opacity: 1}
+.bumps {
+    transform: translate(80%);
+    margin: 0;
+    padding: 0;
+    width: 100px;
+    height: 100px;
+    background-color: #fff; /* White cloud color */
+    border-radius: 100px; /* Makes the shape circular */
+    box-shadow: -20px 00px 0 0 #ffffff, 20px 00px 0 0 #ffffff, 60px 20px 0 0 #88136f,
+                80px 20px 0 0 #418f29, 100px 20px 0 0 #dae908, 120px 20px 0 0 #e66b07;
 }
