--- a/marioTracker/templates/marioTracker/base.html
+++ b/marioTracker/templates/marioTracker/base.html
@@ -2,14 +2,15 @@
 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block style %}
         {% endblock %}
     </head>
     <body id="body">
         
-        {% block nav %}
+        {% block header %}
+
         {% endblock %}
-        
 
         {% block content %}
         {% endblock %}
