--- a/marioTracker/static/marioTracker/index.css
+++ b/marioTracker/static/marioTracker/index.css
@@ -3,11 +3,18 @@
 }
 
 #body {
-   background-color: #B8F3FF; 
+   background-color: #080F21;
+   display: flex;
+   flex-direction: column;
+   height: 100vh;
+   width: 100vw;
+   margin: 0;
+   padding: 0;
 }
 
 .header {
-    background-color: #660000;
+    height: 10%;
+    background-color: #080F21;
     display: flex;
     justify-content: space-between;
 }
@@ -26,7 +33,7 @@
 .nav-links {
     display: flex;
     list-style: none;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: inherit;
 }
 
@@ -42,32 +49,190 @@
     font-size: 20px;
 }
 
+.tinyCloud {
+    background-color: #AEB7B3;
+    height: 20%;
+    border-radius: 30%;
+    margin-right: 10px;
+    position: relative;
+}
+
+.tinyBump {
+    width: 20%;
+    aspect-ratio: 1/1;
+    border-radius: 40%;
+    background-color: #AEB7B3;
+    position: absolute;
+}
+
+.tinyBump:nth-child(1) {
+    width: 40%;
+    height: 60%;
+    left: 2%;
+    bottom: 60%;
+}
+
+.tinyBump:nth-child(2) {
+    width: 40%;
+    height: 60%;
+    right: 2%;
+    bottom: 60%;
+}
+
+.tinyBump:nth-child(3) {
+    width: 40%;
+    height: 60%;
+    right: 5%;
+    top: 70%;
+}
+
+.tinyBump:nth-child(4) {
+    width: 40%;
+    height: 60%;
+    top: 70%;
+    left: 5%;
+}
+
+.tinyBump:nth-child(5) {
+    width: 40%;
+    height: 60%;
+    right: 30%;
+    top: 80%;
+}
+
+.tinyBump:nth-child(6) {
+    width: 40%;
+    height: 60%;
+    right: 30%;
+    bottom: 80%;
+}
+
+.heroSection{
+    flex-grow: 1;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    min-height: 100%;
+}
+
 .cloud {
-    transform: translate(80%);
-    width: 400px;
-    height: 400px;
+    height: 20%;
+    width: 60%;
+    background-color: #AEB7B3;
+    border-radius: 100px;
+    position: relative;
+    top: 10%;
 }
 
-.base {
-    transform: translate(80%);
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    height: 100px;
-    background-color: #fff; /* White cloud color */
-    border-radius: 100px; /* Makes the shape circular */
-    box-shadow: -20px 00px 0 0 #ffffff, 20px 00px 0 0 #ffffff, 60px 20px 0 0 #88136f,
-                80px 20px 0 0 #418f29, 100px 20px 0 0 #dae908, 120px 20px 0 0 #e66b07;
+.cloudText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 55px;
+    font-family: Comic Sans MS;
+    font-weight: bold;
+    color: black;
 }
 
-.bumps {
-    transform: translate(80%);
-    margin: 0;
-    padding: 0;
-    width: 100px;
-    height: 100px;
-    background-color: #fff; /* White cloud color */
-    border-radius: 100px; /* Makes the shape circular */
-    box-shadow: -20px 00px 0 0 #ffffff, 20px 00px 0 0 #ffffff, 60px 20px 0 0 #88136f,
-                80px 20px 0 0 #418f29, 100px 20px 0 0 #dae908, 120px 20px 0 0 #e66b07;
+.largerBumps {
+    width: 35%;
+    aspect-ratio: 0.6/0.45;
+    border-radius: 50%;
+    position: absolute;
+    background-color: #AEB7B3;
 }
+
+.largerBumps:nth-child(1){
+    height: 90%;
+    left: 10%;
+    top: 70%;
+    border-radius: 45%;
+}
+
+.largerBumps:nth-child(2) {
+    aspect-ratio: 1/0.55;
+    width: 35%;
+    left: 5%;
+    bottom: 65%;
+}
+
+.largerBumps:nth-child(3) {
+    width: 35%;
+    right: 5%;
+    bottom: 65%;
+    aspect-ratio: 1/0.55;
+}
+
+.largerBumps:nth-child(4) {
+    height: 90%;
+    right: 10%;
+    top: 65%;
+    border-radius: 45%;
+}
+
+.largerBumps:nth-child(5) {
+    right: 32%;
+    bottom: 80%;
+    border-radius: 40%;
+    aspect-ratio: 2.25/1.25;
+}
+
+.largerBumps:nth-child(6) {
+    height: 90%;
+    right: 33%;
+    top: 80%;
+    border-radius: 45%;
+}
+
+.city {
+    outline: red dotted;
+    height: 30%;
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+
+.buildings {
+    display: flex;
+    outline: 2px solid green;
+    width: 100%;
+    height: 90%;
+    position: relative;
+    top: 0%;
+    justify-content: space-between;
+    align-items:baseline;
+}
+
+.tallBuilding {
+    position: relative;
+    height: 100%;
+    width: 10%;
+    background-color: #030711;
+}
+
+.mediumBuilding {
+    height: 70%;
+    width: 15%;
+    background-color: #030711;
+}
+
+.kart1 {
+    height: 20%;
+    width: 10%;
+    position: absolute;
+    background-image: url();
+}
+
+.street {
+    position: absolute;
+    width: 100%;
+    height: 10%;
+    outline: white;
+    background-color: rgb(17, 17, 17);
+    outline-style: dotted;
+    bottom: 0%;
+}
+
